Feat(AtualizaçãoDoConteúdo): Atualização da unidade de Abstração

--- a/public/configuracao_conteudo.json
+++ b/public/configuracao_conteudo.json
@@ -245,6 +245,39 @@
                     {
                         "tipoQuestaoString": "INTEGRAL",
                         "identificador": "q1_a1_abstracao",
+                        "enunciado": "A1. Para falar das atividades necessárias para detalhar a abstração “Organizar o seu guarda-roupa”, identifique a atividade que lhe parece menos adequada:",
+                        "gabaritos": [
+                            {
+                                "alternativa": "Separar as peças de roupa por tipo.",
+                                "chave": "1",
+                                "valor": "0"
+                            },
+                            {
+                                "alternativa": "Para cada tipo de peça, organizar por cores.",
+                                "chave": "2",
+                                "valor": "0"
+                            },
+                            {
+                                "alternativa": "Guardar cada peça no espaço reservado para o seu tipo.",
+                                "chave": "3",
+                                "valor": "0"
+                            },
+                            {
+                                "alternativa": "Separar as peças por cor, independentemente do tipo.",
+                                "chave": "4",
+                                "valor": "1"
+                            }
+                        ]
+                    }
+                ]
+            },
+            {
+                "identificador": "atividade_2_abstracao",
+                "nomeAtividade": "Atividades Avaliativas",
+                "questoes": [
+                    {
+                        "tipoQuestaoString": "INTEGRAL",
+                        "identificador": "q1_a2_abstracao",
                         "enunciado": "Considere a organização de uma biblioteca e indique o que lhe parece ser uma abstração mais conveniente para falar de livros: ",
                         "gabaritos": [
                             {
@@ -271,62 +304,8 @@
                     },
                     {
                         "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q2_a1_abstracao",
-                        "enunciado": "Para organizar seu guarda-roupas, o que lhe parece ser uma abstração mais conveniente para falar de roupas: ",
-                        "gabaritos": [
-                            {
-                                "alternativa": "A grife das peças.",
-                                "chave": "1",
-                                "valor": "0"
-                            },
-                            {
-                                "alternativa": "O país onde as peças são fabricadas.",
-                                "chave": "2",
-                                "valor": "0"
-                            },
-                            {
-                                "alternativa": "O preço das peças.",
-                                "chave": "3",
-                                "valor": "0"
-                            },
-                            {
-                                "alternativa": "O tipo das peças, por exemplo, calça, bermuda, vestido, saia, blazer etc.",
-                                "chave": "4",
-                                "valor": "1"
-                            }
-                        ]
-                    },
-                    {
-                        "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q3_a1_abstracao",
-                        "enunciado": "Para organizar a circulação de veículos de uma cidade, o que parece ser uma característica irrelevante de suas vias: ",
-                        "gabaritos": [
-                            {
-                                "alternativa": "A largura da via.",
-                                "chave": "1",
-                                "valor": "0"
-                            },
-                            {
-                                "alternativa": "A altura máxima permitida para o tráfego de veículos.",
-                                "chave": "2",
-                                "valor": "0"
-                            },
-                            {
-                                "alternativa": "A idade média dos veículos que trafegam na via.",
-                                "chave": "3",
-                                "valor": "1"
-                            },
-                            {
-                                "alternativa": "A tonelagem máxima suportada pela via.",
-                                "chave": "4",
-                                "valor": "0"
-                            }
-                        ]
-                    },
-                    {
-                        "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q4_a1_abstracao",
-                        "enunciado": "Para organizar os produtos da área de vendas ao consumidor, o que lhe parece ser um conjunto menos adequado de setores: ",
+                        "identificador": "q2_a2_abstracao",
+                        "enunciado": "A3. Para organizar os produtos da área de vendas ao consumidor, o que lhe parece ser um conjunto menos adequado de setores:",
                         "gabaritos": [
                             {
                                 "alternativa": "Padaria, Materiais de Limpeza, Congelados, Hortigranjeiros.",
@@ -349,31 +328,64 @@
                                 "valor": "0"
                             }
                         ]
-                    },
+                    }
+                ]
+            },
+            {
+                "identificador": "atividade_3_abstracao",
+                "nomeAtividade": "Atividades Avaliativas",
+                "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q5_a1_abstracao",
-                        "enunciado": "Para falar das atividades necessárias para detalhar a abstração “Organizar o seu guarda-roupa”, identifique a atividade que lhe parece menos adequada: ",
+                        "identificador": "q1_a3_abstracao",
+                        "enunciado": "A4. Para organizar seu guarda-roupas, o que lhe parece ser uma abstração mais conveniente para falar de roupas: ",
                         "gabaritos": [
                             {
-                                "alternativa": "Separar as peças de roupa por tipo.",
+                                "alternativa": "O tecido com qual as peças são confeccionadas.",
                                 "chave": "1",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Para cada tipo de peça, organizar por cores.",
+                                "alternativa": "O país onde as peças são fabricadas.",
                                 "chave": "2",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Guardar cada peça no espaço reservado para o seu tipo.",
+                                "alternativa": "O preço das peças.",
                                 "chave": "3",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Separar as peças por cor, independentemente do tipo.",
+                                "alternativa": "O tipo das peças, por exemplo, calça, bermuda, vestido, saia, blazer etc.",
                                 "chave": "4",
                                 "valor": "1"
+                            }
+                        ]
+                    },
+                    {
+                        "tipoQuestaoString": "INTEGRAL",
+                        "identificador": "q2_a3_abstracao",
+                        "enunciado": "A5. Para organizar a circulação de veículos de uma cidade, o que parece ser uma característica irrelevante de suas vias: ",
+                        "gabaritos": [
+                            {
+                                "alternativa": "A largura da via.",
+                                "chave": "1",
+                                "valor": "0"
+                            },
+                            {
+                                "alternativa": "A altura máxima permitida para o tráfego de veículos.",
+                                "chave": "2",
+                                "valor": "0"
+                            },
+                            {
+                                "alternativa": "A idade média dos veículos que trafegam na via.",
+                                "chave": "3",
+                                "valor": "1"
+                            },
+                            {
+                                "alternativa": "A tonelagem máxima suportada pela via.",
+                                "chave": "4",
+                                "valor": "0"
                             }
                         ]
                     }
