Feat(Correções texto): Correções do texto e adição de Fragment substituindo antigas divs quando possível

--- a/public/configuracao_conteudo.json
+++ b/public/configuracao_conteudo.json
@@ -65,7 +65,7 @@
                                 "valor": "1"
                             },
                             {
-                                "alternativa": "O resultado de uma decomposição são partes ou sistemas mais simples os quais, entretanto, podem serem adequados a novas  decomposições.",
+                                "alternativa": "O resultado de uma decomposição são partes ou sistemas mais simples os quais podem ser adequados a novas  decomposições.",
                                 "chave": "2",
                                 "valor": "0"
                             },
